feat(stock): raw implemntation feature
